--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -777,8 +777,16 @@ body{
   position: relative;
 }
 
+.left-1\/2{
+  left: 50%;
+}
+
 .left-full{
   left: 100%;
+}
+
+.right-0{
+  right: 0px;
 }
 
 .right-full{
@@ -793,12 +801,20 @@ body{
   top: 100%;
 }
 
+.z-30{
+  z-index: 30;
+}
+
 .m-0{
   margin: 0px;
 }
 
 .m-auto{
   margin: auto;
+}
+
+.mb-2{
+  margin-bottom: 0.5rem;
 }
 
 .mb-4{
@@ -833,6 +849,10 @@ body{
   display: block;
 }
 
+.inline{
+  display: inline;
+}
+
 .flex{
   display: flex;
 }
@@ -847,6 +867,10 @@ body{
 
 .aspect-square{
   aspect-ratio: 1 / 1;
+}
+
+.aspect-video{
+  aspect-ratio: 16 / 9;
 }
 
 .size-14{
@@ -880,6 +904,11 @@ body{
   table-layout: auto;
 }
 
+.translate-x-\[-50\%\]{
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 @keyframes pulse{
   50%{
     opacity: .5;
@@ -888,6 +917,14 @@ body{
 
 .animate-pulse{
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+.list-inside{
+  list-style-position: inside;
+}
+
+.list-decimal{
+  list-style-type: decimal;
 }
 
 .flex-col{
@@ -1017,6 +1054,14 @@ body{
   background-color: rgb(23 23 23 / var(--tw-bg-opacity));
 }
 
+.bg-neutral-900\/75{
+  background-color: rgb(23 23 23 / 0.75);
+}
+
+.bg-neutral-900\/92{
+  background-color: rgb(23 23 23 / .92);
+}
+
 .p-2{
   padding: 0.5rem;
 }
@@ -1069,6 +1114,11 @@ body{
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-xs{
@@ -1366,6 +1416,15 @@ input,button,select:focus{
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
+.hover\:cursor-pointer:hover{
+  cursor: pointer;
+}
+
+.hover\:text-red-300:hover{
+  --tw-text-opacity: 1;
+  color: rgb(252 165 165 / var(--tw-text-opacity));
+}
+
 .hover\:text-red-400:hover{
   --tw-text-opacity: 1;
   color: rgb(248 113 113 / var(--tw-text-opacity));
@@ -1412,6 +1471,10 @@ input,button,select:focus{
 @media (min-width: 768px){
   .md\:block{
     display: block;
+  }
+
+  .md\:w-1\/3{
+    width: 33.333333%;
   }
 }
 
