--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -781,6 +781,10 @@ body{
   position: relative;
 }
 
+.left-0{
+  left: 0px;
+}
+
 .left-1\/2{
   left: 50%;
 }
@@ -887,9 +891,27 @@ body{
   height: 8rem;
 }
 
+.size-6{
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
 .size-8{
   width: 2rem;
   height: 2rem;
+}
+
+.size-7{
+  width: 1.75rem;
+  height: 1.75rem;
+}
+
+.h-0{
+  height: 0px;
+}
+
+.w-0{
+  width: 0px;
 }
 
 .w-1\/3{
@@ -925,6 +947,10 @@ body{
 
 .animate-pulse{
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .list-inside{
@@ -1193,6 +1219,10 @@ body{
   color: rgb(250 204 21 / var(--tw-text-opacity));
 }
 
+.opacity-0{
+  opacity: 0;
+}
+
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1423,6 +1453,16 @@ input,button,select:focus{
   color:crimson;
 }
 
+.after\:content-\[\'\*\'\]::after{
+  --tw-content: '*';
+  content: var(--tw-content);
+}
+
+.after\:content-\[\'\'\]::after{
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
 @keyframes pulse{
   50%{
     opacity: .5;
@@ -1483,6 +1523,21 @@ input,button,select:focus{
 
 .group:hover .group-hover\:animate-leftRight{
   animation: leftRight 1s alternate infinite ease-in-out;
+}
+
+.peer:checked ~ .peer-checked\:bg-neutral-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(115 115 115 / var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:after\:visible::after{
+  content: var(--tw-content);
+  visibility: visible;
+}
+
+.peer:checked ~ .peer-checked\:after\:content-\[\'\*\'\]::after{
+  --tw-content: '*';
+  content: var(--tw-content);
 }
 
 @media (min-width: 768px){
