--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -781,10 +781,6 @@ body{
   position: relative;
 }
 
-.left-0{
-  left: 0px;
-}
-
 .left-1\/2{
   left: 50%;
 }
@@ -819,6 +815,10 @@ body{
 
 .m-auto{
   margin: auto;
+}
+
+.m-2{
+  margin: 0.5rem;
 }
 
 .mb-2{
@@ -891,19 +891,14 @@ body{
   height: 8rem;
 }
 
-.size-6{
-  width: 1.5rem;
-  height: 1.5rem;
+.size-7{
+  width: 1.75rem;
+  height: 1.75rem;
 }
 
 .size-8{
   width: 2rem;
   height: 2rem;
-}
-
-.size-7{
-  width: 1.75rem;
-  height: 1.75rem;
 }
 
 .h-0{
@@ -918,6 +913,10 @@ body{
   width: 33.333333%;
 }
 
+.w-1\/4{
+  width: 25%;
+}
+
 .w-3\/4{
   width: 75%;
 }
@@ -928,6 +927,10 @@ body{
 
 .w-full{
   width: 100%;
+}
+
+.w-1\/2{
+  width: 50%;
 }
 
 .table-auto{
@@ -1092,6 +1095,21 @@ body{
   background-color: rgb(23 23 23 / .92);
 }
 
+.bg-slate-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
+.bg-neutral-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 64 64 / var(--tw-bg-opacity));
+}
+
+.bg-neutral-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(38 38 38 / var(--tw-bg-opacity));
+}
+
 .p-2{
   padding: 0.5rem;
 }
@@ -1217,6 +1235,11 @@ body{
 .text-yellow-400{
   --tw-text-opacity: 1;
   color: rgb(250 204 21 / var(--tw-text-opacity));
+}
+
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .opacity-0{
@@ -1453,11 +1476,6 @@ input,button,select:focus{
   color:crimson;
 }
 
-.after\:content-\[\'\*\'\]::after{
-  --tw-content: '*';
-  content: var(--tw-content);
-}
-
 .after\:content-\[\'\'\]::after{
   --tw-content: '';
   content: var(--tw-content);
@@ -1525,11 +1543,6 @@ input,button,select:focus{
   animation: leftRight 1s alternate infinite ease-in-out;
 }
 
-.peer:checked ~ .peer-checked\:bg-neutral-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(115 115 115 / var(--tw-bg-opacity));
-}
-
 .peer:checked ~ .peer-checked\:after\:visible::after{
   content: var(--tw-content);
   visibility: visible;
@@ -1547,6 +1560,10 @@ input,button,select:focus{
 
   .md\:w-1\/3{
     width: 33.333333%;
+  }
+
+  .md\:w-1\/2{
+    width: 50%;
   }
 
   .md\:flex-row{
